--- a/static/scss/flexslider.scss
+++ b/static/scss/flexslider.scss
@@ -131,7 +131,7 @@ html[xmlns] .flexslider .slides {
   font-family: Times;
   font-size: 40px;
   display: inline-block;
-  content: '\f001';
+  content: '⇠';
 }
 .flex-direction-nav a.flex-next:before {
   content: '⇢';
@@ -144,14 +144,14 @@ html[xmlns] .flexslider .slides {
   text-align: right;
 }
 .flexslider:hover .flex-direction-nav .flex-prev {
-  opacity: 0.7;
+  opacity: 1.0;
   left: 10px;
 }
 .flexslider:hover .flex-direction-nav .flex-prev:hover {
   opacity: 1;
 }
 .flexslider:hover .flex-direction-nav .flex-next {
-  opacity: 0.7;
+  opacity: 1.0;
   right: 10px;
 }
 .flexslider:hover .flex-direction-nav .flex-next:hover {
@@ -200,11 +200,11 @@ html[xmlns] .flexslider .slides {
   *display: inline;
 }
 .flex-control-paging li a {
-  width: 11px;
-  height: 11px;
+  width: 8px;
+  height: 8px;
   display: block;
   background: #666;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.25);
   cursor: pointer;
   text-indent: -9999px;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
@@ -220,7 +220,7 @@ html[xmlns] .flexslider .slides {
   background: rgba(0, 0, 0, 0.7);
 }
 .flex-control-paging li a.flex-active {
-  background: #000;
+  background: $rust;
   background: rgba(0, 0, 0, 0.9);
   cursor: default;
 }
