--- a/static/scss/module.scss
+++ b/static/scss/module.scss
@@ -77,11 +77,17 @@ body{
 		margin-top:2em;
 		padding:0;
 		li{
-			font-size:2.5em;
+			font-size:2em;
 			line-height:1em;
 			@media screen and (min-width:550px){
-				font-size:4em;
+				font-size:2.5em;
 				line-height:1em;
+			}
+			@media screen and (min-width:700px){
+				font-size:3em;
+			}
+			@media screen and (min-width:1000px){
+				font-size:4em;
 			}
 			list-style:none;
 		}
@@ -124,6 +130,21 @@ img{
 	// background:rgb(248,248,248);
 }
 
+#press-release,
+#facts,
+#past-presidents,
+#search-process{
+	background-position:-60vw 0;
+	@media screen and (min-width:550px){
+		background-position: -30vw 0;
+	}
+	@media screen and (min-width:720px){
+		background-position:0vw 0;
+	}
+}
+
+
+
 // TITLE SLIDE ----------------------------------
 
 .title-slide{
@@ -131,10 +152,17 @@ img{
 	h1.main-title{
 		color:$rust;
 		text-align:left;
-		margin-top:0.5em;
+		margin-top:1em;
 		line-height:1em;
 		margin-bottom:0em;
 		// text-shadow:0px 0px 30px rgba(0,0,0,0.3);
+	}
+	background-position:-70vw 0;
+	@media screen and (min-width:550px){
+		background-position:-20vw 0;
+	}
+	@media screen and (min-width:800px){
+		background-position:0 0;
 	}
 }
 
@@ -268,6 +296,8 @@ figure[data-type=quote]{
 	cite{
 		font-family:"Calibre Web";
 		font-style:normal;
+		font-size:20px;
+		font-weight:normal;
 		
 	}
 }
@@ -275,7 +305,9 @@ figure[data-type=quote]{
 figure[data-type=quote].side-rail{
 	margin:0em;
 	padding:0em;
+
 	blockquote{
+		font-size:20px;
 		margin:0em;
 	}
 }
@@ -293,7 +325,31 @@ figure[data-type=quote].side-rail{
 .fact-sheet{
 	.three.columns{
 		margin-left:0;
+		margin-top:4.25em;
 	}
+}
+
+
+// press images
+.press-images{
+	figure{
+		margin-right:0;
+	}
+	figure:first-child{
+		margin-left:0;
+	}
+
+	figure:nth-child(5){
+		margin-left:0;
+	}
+}
+
+
+a.flex-next,
+a.flex-prev{
+	color:white;
+	border-bottom:none;
+	// opacity:1.0;
 }
 
 // PAST PRESIDENTS ---------------------------
@@ -305,7 +361,6 @@ figure[data-type=quote].side-rail{
 	max-height:7em;
 	opacity:0.5;
 	mix-blend-mode: multiply;
-	background:$rust;
 	border-radius:100%;
 	border:4px solid white;
 	box-shadow:0px 0px 1px rgb(200,200,200);
@@ -398,10 +453,10 @@ svg#search-process{
 // SECTIONS -----------------------------
 
 #announcement{
-	background:#becfd5;
-	color:rgb(50,50,50);
+	// background:#becfd5;
+	// color:rgb(50,50,50);
 	h2{
-		color:rgb(240,240,240);
+		// color:rgb(240,240,240);
 	}
 	.timeline-date{
 		// color:$rust;
