--- a/static/scss/type.scss
+++ b/static/scss/type.scss
@@ -33,15 +33,16 @@ body{
 }
 .main-title{
 	@media screen and (min-width:550px){
-		font-size:160px;
+		font-size:60px;
 		margin-bottom:0.25em;
+
 	}
 }
 
 h1{
 	letter-spacing:-0.025em;
 	line-height:0.7em;
-	// mix-blend-mode: multiply;
+	mix-blend-mode: multiply;
 	@media screen and (min-width:550px){
 		font-size:100px;
 		margin-top:0.25em;
@@ -51,17 +52,18 @@ h1{
 	}
 	@media screen and (min-width:900px){
 		font-size:200px;
+		margin-top:-0.125em;
 	}
 }
 
 h2{
 	line-height:1.1em;
 	@media screen and (min-width:550px){
-
+		font-size:1.25em;
 	}
 
 	@media screen and (min-width:750px){
-		font-size:2em;
+		font-size:1.5em;
 	}
 
 	@media screen and (min-width:900px){
@@ -92,7 +94,7 @@ h3{
 	letter-spacing:0.45px;
 }
 
-p,li{
+p,li, figcaption{
 	font-family:"Calibre Web", Avenir, Helvetica, Arial, Sans-serif;
 	letter-spacing:0.25px;
 }
