--- a/static/scss/module.scss
+++ b/static/scss/module.scss
@@ -40,6 +40,9 @@ body{
 			// background:yellow;
 		}
 	}
+	a.risd-link:link{
+		border-bottom:none;
+	}
 	svg#risd-seal{
 		z-index:10;
 		// position:fixed;
