--- a/static/css/module.css
+++ b/static/css/module.css
@@ -1,6 +1,6 @@
 /*
-Error: Undefined variable: "$rust".
-        on line 17 of scss/module.scss
+Syntax error: Undefined variable: "$rust".
+        on line 17 of static/scss/module.scss
 
 12: 	z-index:40;
 13: 	width:100%;
@@ -15,78 +15,77 @@ Error: Undefined variable: "$rust".
 22: 	}
 
 Backtrace:
-scss/module.scss:17
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/engine.rb:368:in `_render_with_sourcemap'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/engine.rb:285:in `render_with_sourcemap'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:272:in `call'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:272:in `_process_changes'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:231:in `block in _wait_for_changes'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:214:in `loop'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:214:in `_wait_for_changes'
-/Users/mbarrett/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:301:in `block in _start_wait_thread'
+static/scss/module.scss:17
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/script/tree/variable.rb:49:in `_perform'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/script/tree/node.rb:50:in `perform'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:366:in `visit_prop'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `map'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `map'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `map'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `map'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:151:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/tree/root_node.rb:20:in `render'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/engine.rb:274:in `render'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:378:in `update_stylesheet'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `each'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:357:in `on_file_changed'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:250:in `block in watch'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:272:in `call'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:272:in `_process_changes'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:231:in `block in _wait_for_changes'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:214:in `loop'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:214:in `_wait_for_changes'
+/Users/rubenrodriguez/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/listen-2.7.6/lib/listen/listener.rb:301:in `block in _start_wait_thread'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$rust\".\A         on line 17 of scss/module.scss\A \A 12: 	z-index:40;\A 13: 	width:100%;\A 14: 	padding-top:0.5em;\A 15: 	.hamburger-activator{\A 16: 		line{\A 17: 			stroke:$rust;\A 18: 			stroke-width:3;\A 19: 		}\A 20: 		max-width:30px;\A 21: 		max-height:30px;\A 22: 	}"; }
+  content: "Syntax error: Undefined variable: \"$rust\".\A         on line 17 of static/scss/module.scss\A \A 12: 	z-index:40;\A 13: 	width:100%;\A 14: 	padding-top:0.5em;\A 15: 	.hamburger-activator{\A 16: 		line{\A 17: 			stroke:$rust;\A 18: 			stroke-width:3;\A 19: 		}\A 20: 		max-width:30px;\A 21: 		max-height:30px;\A 22: 	}"; }
