--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -71,6 +71,7 @@
 
       <!-- build:js /static/javascript/minified.js -->
       <script src="/static/javascript/jquery.flexslider.js"></script>
+      <script src="/static/javascript/imagesloaded.pkgd.js"></script>
       <script src="/static/javascript/masonry.js"></script>
       <script src="/static/javascript/main.js"></script>
       <!-- endbuild -->
