--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1013,8 +1013,13 @@ p.caption {
   margin-left: 0;
   margin-top: 4.25em; }
 
+.press-images figure {
+  -webkit-margin-after: 0;
+  -webkit-margin-before: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0; }
 .press-images .press-image {
-  width: 30%;
+  width: 33%;
   margin: 0; }
   .press-images .press-image .press-image-wrapper {
     position: relative;
