--- a/static/scss/module.scss
+++ b/static/scss/module.scss
@@ -354,7 +354,10 @@ p.caption{
 // press images
 .press-images{
 	figure {
-		// margin-right:0;
+		-webkit-margin-after: 0;
+		-webkit-margin-before: 0;
+		-webkit-margin-start: 0;
+		-webkit-margin-end: 0;
 	}
 	figure:first-child {
 		// margin-left:0;
@@ -364,7 +367,7 @@ p.caption{
 		// margin-left:0;
 	}
 	.press-image {
-		width: 30%;
+		width: 33%;
 		margin: 0;
 
 		.press-image-wrapper {
