--- a/templates/partials/side-nav.html
+++ b/templates/partials/side-nav.html
@@ -1,7 +1,7 @@
 <nav class="second-nav">
 	<div class="container">
 		<ul class="eight columns offset-by-two">
-			<li><a class="nav-link"href="../false-index">home</a></li>
+			<li><a class="nav-link"href="../">home</a></li>
 			<li><a class="nav-link"href="../bio">president’s bio</a></li>
 			<li><a class="nav-link"href="../fact-sheet">risd facts</a></li>
 			<li><a class="nav-link"href="../press">press release</a></li>
