--- a/static/css/site.css
+++ b/static/css/site.css
@@ -709,14 +709,15 @@ h1 {
   @media screen and (min-width: 550px) {
     h1 {
       font-size: 100px;
-      margin-top: 0.25em; } }
+      margin-top: -0.25em; } }
   @media screen and (min-width: 750px) {
     h1 {
-      font-size: 170px; } }
+      font-size: 170px;
+      margin-top: -0.25em; } }
   @media screen and (min-width: 900px) {
     h1 {
       font-size: 200px;
-      margin-top: -0.125em; } }
+      margin-top: -0.25em; } }
 
 h2 {
   line-height: 1.1em; }
@@ -1013,14 +1014,15 @@ p.caption {
   margin-left: 0;
   margin-top: 4.25em; }
 
-.press-images .press-image {
-  width: 30%;
-  margin: 0; }
-  .press-images .press-image .press-image-wrapper {
-    position: relative;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 20px; }
+@media screen and (min-width: 700px) {
+  .press-images .press-image {
+    width: 30%;
+    margin: 0; } }
+.press-images .press-image .press-image-wrapper {
+  position: relative;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px; }
 
 a.flex-next,
 a.flex-prev {
@@ -1093,3 +1095,5 @@ svg#search-process {
 
 img.side-rail {
   margin-top: 1em; }
+
+/*# sourceMappingURL=site.css.map */
