--- a/scss/components/nav-module.scss
+++ b/scss/components/nav-module.scss
@@ -12,10 +12,12 @@
 	z-index:1000;
 	width:100%;
 	padding-top:0.5em;
+	top: 0;
 }
 .hamburger-activator{
     max-width:30px;
     max-height:30px;
+    margin-left: 1rem;
     &:hover {
         cursor:pointer;
     }
@@ -28,6 +30,7 @@
     position: absolute;
     right: 0;
     display: inline-block;
+    margin-right: 1rem;
 }
 svg#risd-seal{
     z-index:1010;
@@ -55,6 +58,7 @@ svg#risd-seal:hover{
 	z-index:900;
 	left:-100%;
     transition: left 0.4s ease-in-out;
+	top: 0;
 }
 .mainNav-item {
     font-size:2em;
