--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -43,7 +43,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 
-  
+
     {# Useful block for loading outside scripts in other pages. #}
     {% block head_extra %}{% endblock %}
   </head>
@@ -54,7 +54,7 @@
       <![endif]-->
 
       {% block header %}
-        {% include "templates/partials/header.html" %}
+        {# {% include "templates/partials/header.html" %} #}
       {% endblock %}
 
       {# By default, your inner pages will load into this block. #}
@@ -78,7 +78,7 @@
 
       {% block scripts_extra %}{% endblock %}
 
-     
+
       {# Google Analytics code. Feel free to remove. #}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
