--- a/scss/components/nav-module.scss
+++ b/scss/components/nav-module.scss
@@ -11,8 +11,7 @@
 	position:fixed;
 	z-index:1000;
 	width:100%;
-	padding-top:0.5em;
-	top: 0;
+	top: 5vh;
 }
 .hamburger-activator{
     max-width:30px;
