--- a/templates/partials/poster-moment.html
+++ b/templates/partials/poster-moment.html
@@ -45,7 +45,7 @@
         <div class="risd-container"><h1 class="risd-text">D</h1></div>
         <div class="posterItems">
             <div class="posterItem-box--large">
-                <div class="posterItem-inaugurationText--large"><h2>The </br>Inauguration </br>of </br>Rosanne </br>Somerson </br>2015</h2></div>
+                <div class="posterItem-campaignText--large"><h2><span>Ideas</span> </br>that don’t </br>exist yet.</h2></div>
             </div>
         </div>
     </div>
