--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -73,6 +73,7 @@ h2 {
     font-size: $t-size--large;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--tight;
+    text-align: center;
 }
 
 h3 {
@@ -80,6 +81,7 @@ h3 {
     font-size: $t-size--large;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--tight;
+    text-align: center;
 }
 
 h4 {
@@ -87,6 +89,7 @@ h4 {
     font-size: $t-size--medium;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--normal;
+    text-align: center;
 }
 
 h5, h6 {
@@ -94,6 +97,7 @@ h5, h6 {
     font-size: $t-size--small;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--normal;
+    text-align: center;
 }
 
 blockquote {
@@ -110,12 +114,16 @@ ul {
 
 div,
 img {
-    @include l-autoSize;
+    // @include l-autoSize;
 }
 
 iframe {
     width: 100%;
     height: 300px;
+}
+
+*:focus {
+    outline: 0;
 }
 
 @lost gutter 4.165rem;
