--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -70,7 +70,8 @@
       {# http://www.webhook.com/docs/minify-your-js-and-css/ #}
 
       <!-- build:js /static/javascript/minified.js -->
-      <script src="/static/javascript/jquery.flexslider.js"></script>
+      <script src="/static/javascript/slick.js"></script>
+      {# <script src="/static/javascript/jquery.flexslider.js"></script> #}
       <script src="/static/javascript/imagesloaded.pkgd.js"></script>
       <script src="/static/javascript/masonry.js"></script>
       <script src="/static/javascript/main.js"></script>
